 * Added `--schema-only` option to `update_index` management command
 * Added meaningful default icons to `StreamField` blocks (Benjamin Bach)
 * Added title text to action buttons in the page explorer (Liam Brenner)
 * Changed project template to explicitly import development settings via `settings.dev` (Tomas Olander)
 * Improved L10N and I18N for revisions list (Roel Bruggink)
 * Fix: The currently selected day is now highlighted only in the correct month in date pickers (Jonas Lergell)
 * Fix: Fixed crash when an image without a source file was resized with the "dynamic serve view"
 * Fix: Registered settings admin menu items now show active correctly (Matthew Downey)
 * Fix: Direct usage of `Document` model replaced with `get_document_model` function in `wagtail.contrib.wagtailmedusa` and in `wagtail.contrib.wagtailapi`
 * Fix: Failures on sending moderation notification emails now produce a warning, rather than crashing the admin page outright (Matt Fozard)


1.4.4 (xx.xx.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: The `wagtailuserbar` template tag now gracefully handles situations where the `request` object is not in the template context (Matt Westcott)
 * Fix: Meta classes on StreamField blocks now handle multiple inheritance correctly (Tim Heap)


1.4.3 (04.04.2016)
~~~~~~~~~~~~~~~~~~

 * Fixed regression introduced in 1.4.2 which caused Wagtail to query the database during a system check (Tim Heap)


1.4.2 (31.03.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Streamfields no longer break on validation error
 * Fix: Number of validation errors in each tab in the editor is now correctly reported again
 * Fix: Userbar now opens on devices with both touch and mouse (Josh Barr)
 * Fix: `wagtail.wagtailadmin.wagtail_hooks` no longer calls `static` during app load, so you can use `ManifestStaticFilesStorage` without calling the `collectstatic` command
 * Fix: Fixed crash on page save when a custom `Page` edit handler has been specified using the `edit_handler` attribute (Tim Heap)

